bundled_metadata/force-app/main/default/objects/Feature_Definition__c/Feature_Definition__c.object-meta.xml
<CustomObject>
    <label>Feature Definition</label>
    <nameField>
        <displayFormat>FD-{00}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>