bundled_metadata/force-app/main/default/objects/Feature_Definition__c/fields/EUSFA_Market_Module__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Market_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Module</label>
    <referenceTo>Market_Module__c</referenceTo>
    <relationshipLabel>Feature Definitions</relationshipLabel>
    <relationshipName>Feature_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>