bundled_metadata/force-app/main/default/objects/Feature_Definition__c/fields/Feature_Description__c.field-meta.xml
<CustomField>
    <fullName>Feature_Description__c</fullName>
    <label>Feature Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>