bundled_metadata/force-app/main/default/objects/Feature_Definition__c/fields/Feature_Id__c.field-meta.xml
<CustomField>
    <fullName>Feature_Id__c</fullName>
    <label>Feature Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>