bundled_metadata/force-app/main/default/objects/Feature_Definition__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EUSFA_Module</valueSetName>
    </valueSet>
</CustomField>