bundled_metadata/force-app/main/default/objects/Feature_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Feature_Id__c</columns>
    <columns>Feature_Description__c</columns>
    <columns>Module__c</columns>
    <columns>EUSFA_Market_Module__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>